[package]
name = "deno_lint"
version = "0.62.0"
edition = "2021"
description = "lint for deno"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_lint"
keywords = ["deno", "lint"]
categories = ["development-tools"]
exclude = [
    "benchmarks/*",
]

[lib]
name = "deno_lint"

[[example]]
name = "dlint"
required-features = ["docs"]
test = true

[features]
default = []
docs = []

[dependencies]
deno_ast = { version = "0.41.1", features = ["scopes", "transforms", "utils", "visit", "view", "react"] }
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.2"
once_cell = "1.19.0"
derive_more = { version = "0.99.17", features = ["display"] }
anyhow = "1.0.79"
if_chain = "1.0.2"
swc_estree_compat = "0.207.1"
swc_node_comments = "0.23.0"

[dev-dependencies]
ansi_term = "0.12.1"
clap = { version = "3", features = ["cargo"] }
env_logger = "0.10.1"
globwalk = "0.9.1"
os_pipe = "1.1.5"
pulldown-cmark = "0.9.3"
rayon = "1.8.0"
console_static_text = "0.8.2"
miette = { version = "4.3.0", features = ["fancy-no-backtrace"] }
deno_core = "0.301.0"
tokio = "1.35"

[patch.crates-io]
deno_ast = { path = "../deno_ast" }
swc_estree_compat = { path = "../swc/crates/swc_estree_compat/" }
swc_node_comments = { path = "../swc/crates/swc_node_comments/" }
swc_atoms = { path = "../swc/crates/swc_atoms" }
swc_common = { path = "../swc/crates/swc_common" }
swc_config = { path = "../swc/crates/swc_config" }
swc_config_macro = { path = "../swc/crates/swc_config_macro" }
swc_ecma_ast = { path = "../swc/crates/swc_ecma_ast" }
swc_ecma_codegen = { path = "../swc/crates/swc_ecma_codegen" }
swc_ecma_codegen_macros = { path = "../swc/crates/swc_ecma_codegen_macros" }
swc_ecma_loader = { path = "../swc/crates/swc_ecma_loader" }
swc_ecma_parser = { path = "../swc/crates/swc_ecma_parser" }
swc_ecma_transforms_base = { path = "../swc/crates/swc_ecma_transforms_base" }
swc_ecma_transforms_classes = { path = "../swc/crates/swc_ecma_transforms_classes" }
swc_ecma_transforms_compat = { path = "../swc/crates/swc_ecma_transforms_compat" }
swc_ecma_transforms_macros = { path = "../swc/crates/swc_ecma_transforms_macros" }
swc_ecma_transforms_optimization = { path = "../swc/crates/swc_ecma_transforms_optimization" }
swc_ecma_transforms_proposal = { path = "../swc/crates/swc_ecma_transforms_proposal" }
swc_ecma_transforms_react = { path = "../swc/crates/swc_ecma_transforms_react" }
swc_ecma_transforms_typescript = { path = "../swc/crates/swc_ecma_transforms_typescript" }
swc_ecma_utils = { path = "../swc/crates/swc_ecma_utils" }
swc_ecma_visit = { path = "../swc/crates/swc_ecma_visit" }
swc_eq_ignore_macros = { path = "../swc/crates/swc_eq_ignore_macros" }
swc_bundler = { path = "../swc/crates/swc_bundler" }
swc_graph_analyzer = { path = "../swc/crates/swc_graph_analyzer" }
swc_macros_common = { path = "../swc/crates/swc_macros_common" }
swc_trace_macro = { path = "../swc/crates/swc_trace_macro" }
swc_visit = { path = "../swc/crates/swc_visit" }
swc_visit_macros = { path = "../swc/crates/swc_visit_macros" }
